# MTOps

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
data/itsm/: db.json  policy.md  tasks.json  tenancy.json
docs/: itsm_build_spec.md  itsm_fidelity_audit.md  itsm_schema.sql  itsm_tool_catalog.json
examples/: run_eval.py
scripts/: add_verifiers_to_tasks.py  assemble_tasks.py  sql_seed_to_db_json.py
src/eops_gym/: __init__.py  (+3 more)
tests/: conftest.py  itsm_oracle.py  test_agent_user_mock.py  test_db_fuzzy_match.py  test_framework.py  test_gym.py  test_incident_sla_clock.py  test_itsm_change_request_mappings_conformance.py  test_itsm_changes_conformance.py  test_itsm_configuration_items_conformance.py  test_itsm_conformance.py  test_itsm_constraint_fidelity.py  test_itsm_e2e_mock.py  test_itsm_groups_conformance.py  test_itsm_incident_affected_cis_conformance.py  test_itsm_incident_knowledges_conformance.py  test_itsm_incident_slas_conformance.py  test_itsm_incident_templates_conformance.py  test_itsm_incidents_conformance.py  test_itsm_integrated_conformance.py  test_itsm_knowledge_conformance.py  test_itsm_locations_conformance.py  test_itsm_notification_analysis_conformance.py  test_itsm_notifications_conformance.py  test_itsm_problems_conformance.py  test_itsm_service_offerings_conformance.py  test_itsm_services_conformance.py  test_itsm_sla_definitions_conformance.py  test_itsm_sla_metrics_conformance.py  test_itsm_task_fidelity.py  test_itsm_tasks.py  test_itsm_users_conformance.py  test_itsm_validators.py  test_run_keval.py  verifier_check.py
(+59 files in other folders)
